# swd_simulation

./: .envrc  .gitignore  .nojekyll  Manifest.toml  Project.toml  README.md  _quarto.yml  about.html  environment.deps.yml  environment.linux.yml  environment.macos.yml  environment.yml  index.html  index.qmd  install.txt  justfile  pixi.toml  pyproject.toml  search.json  spack.yaml  vpic-kokkos.code-workspace
data/dim=1_beta=0.25_theta=60_plasma_resistivity=100_wave_length=64_Te_norm=0.1/: inputs  sim_parameters.json  warpx_used_inputs
data/dim=1_beta=0.25_theta=60_plasma_resistivity=100_wave_length=64_Te_norm=1/: sim_parameters.json  warpx_used_inputs
data/dim=1_beta=0.25_theta=60_plasma_resistivity=100_wave_length=64_Te_norm=10/: inputs  sim_parameters.json  warpx_used_inputs
data/dim_1_beta_0.25_theta_0.0_eta_100.0/: inputs
data/dim_1_beta_0.25_theta_0.0_eta_200.0/: inputs  warpx_used_inputs
data/dim_1_beta_0.25_theta_60.0_eta_10.0/: warpx_used_inputs
data/dim_1_beta_0.25_theta_60.0_eta_100.0_l_32.0/: warpx_used_inputs
data/dim_1_beta_2.0_theta_0.0_eta_200.0/: inputs  sim_parameters.json
data/dim_1_beta_2.0_theta_60.0_eta_10.0/: index.qmd  sim_parameters.json  warpx_used_inputs
data/dim_1_beta_2.0_theta_60.0_eta_10.0_l_64.0/: inputs  sim_parameters.json
files/: hpc.just  quarto.just
files/jobs/: warpx.pbs
jobs/: install-warpx.pbs  micromamba.pbs
notebooks/: analysis_jl.ipynb
presentations/: sparthb.html  sparthb.qmd
scripts/: intro.jl  justfile  main.jl  main.py  run.py
scripts/utils/: io.jl  plot.jl
src/: init.jl
src/WarpX.jl/: WarpX.jl
src/WarpX.jl/utils/: analysis.jl  io.jl  plot.jl  warpx.jl
src/vpic/anxin/: job.fields.mpi.derecho.pbs  job.hvpic.mpi.2d.alfven.wind.derecho.pbs  job.particles.mpi.derecho.pbs  low2high_2d_alfven_wind.cxx  plots_pppp.py  translate_fields.f90  translate_particles.f90
src/warpx/: analysis.ipynb  justfile  main.py
src/warpx/00_EMModes/: inputs  inputs.ipynb
vpic/anxin/: Makefile  job.fields.mpi.derecho  job.hvpic.mpi.2d.alfven.wind.derecho  job.hvpic.mpi.2d.alfven.wind.derecho.pbs  job.particles.mpi.derecho  justfile  low2high_2d_alfven_wind.Linux  plots_ffff.py
warpx/: PICMI_inputs.py  analysis.html  analysis.ipynb  analysis.jl  analysis.qmd  analysis_jl.html  analysis_jl.ipynb  inputs  inputs.html  inputs.ipynb  inputs.py  justfile  main.jl  main.py  plot.py  sim_parameters.json  warpx.pbs.e3767243  warpx.pbs.o3767243  warpx_used_inputs
warpx/00_EMModes/: inputs.html  inputs_em_modes copy
warpx/01_oblique_linear_alfven/: index.html  index.md  inputs  inputs.html  inputs.ipynb  justfile  main.py  sim_parameters.json  test.ipynb
warpx/01_oblique_linear_alfven_1d/: analysis.html  analysis.ipynb  inputs  inputs.html  inputs.ipynb  sim_parameters.json  warpx_used_inputs
warpx/02_oblique_linear_alfven/: analysis.html  analysis.ipynb  inputs  inputs.html  inputs.ipynb  sim_parameters.json  warpx_used_inputs
warpx/02_polar_alfven/: inputs  inputs.html
warpx/EMModes/: PICMI_inputs.py  inputs.html  inputs.ipynb  inputs_em_modes  sim_parameters.json
warpx/oblique_linear_alfven/: analysis.html  analysis.ipynb  inputs.html  inputs.ipynb  sim_parameters.json
warpx/utils/: __init__.py  analysis.jl  energy.py  io.jl  io.py  openpmd.jl  plot.jl  plot.py  pressure.py  yt.py  yt_warpx.py
(+77 files in other folders)
