[project]
name = "warpx"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Beforerr", email = "zzj956959688@gmail.com"}]
requires-python = ">= 3.10"
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
warpx = { path = ".", editable = true}
beforerr = { path = "../beforerr_dev", editable = true}
space_analysis = { path = "../space-analysis.py", editable = true }

[tool.pixi.dependencies]
jupyter = "*"
yt = "*"
matplotlib = "*"
plasmapy = "*"
pydantic = "*"
polars = "*"
rich = "*"
loguru = "*"
icecream = "*"
typer = "*"
sacred = ">=0.8.5,<0.9"

[tool.pixi.tasks]

[tool.pixi.target.osx-arm64.dependencies]
warpx = "*"

[tool.pixi.target.linux-64.dependencies]
# ccache = "*"
# cmake = "*"
# llvm-openmp = "*"
# ninja = "*"
# blaspp = "*"
# lapackpp = "*"
# pkg-config = "*"
# openmpi = "*"
# fftw = { version = "*", build = "mpi_openmpi*" }
# h5py = { version = "*", build = "mpi_openmpi*" }